--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts": "4.9.3",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
     "ansi-regex": ">=5.0.1",
