--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "hardhat": "^2.13.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "4.9.3",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
     "ansi-regex": ">=5.0.1",
+    "catapulta": "^0.1.38",
     "chai": "^4.3.4",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.7.2",
+    "hardhat": "^2.13.1",
     "hardhat-gas-reporter": "^1.0.9",
     "mem": ">=4.0.0",
-    "merkletreejs": "^0.2.24",
-    "dotenv": "^10.0.0"
+    "merkletreejs": "^0.2.24"
   },
   "scripts": {
     "clean": "hardhat clean",
