--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@openzeppelin/contracts": "4.9.3",
+    "@openzeppelin/contracts": "4.9.5",
     "@openzeppelin/contracts-upgradeable": "3.4.2",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
     "ansi-regex": ">=5.0.1",
-    "catapulta": "^0.1.38",
+    "catapulta": "^0.3.3",
     "chai": "^4.3.4",
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.7.2",
-    "hardhat": "^2.19.1",
-    "hardhat-gas-reporter": "^1.0.9",
+    "hardhat": "2.19.5",
+    "hardhat-gas-reporter": "^1.0.10",
     "mem": ">=4.0.0",
     "merkletreejs": "^0.2.24",
     "solhint": "^4.0.0"
