--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "4.9.5",
-    "@openzeppelin/contracts-upgradeable": "3.4.2",
+    "@openzeppelin/contracts-upgradeable": "3.4.2-solc-0.7",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
