--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@summa-tx/memview-sol": "^2.1.2",
-    "cross-fetch": "^4.0.0"
+    "cross-fetch": "^4.0.0",
+    "web3": "1.8.2"
   }
 }
