--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@openzeppelin/contracts": "4.9.5",
-    "@openzeppelin/contracts-upgradeable": "3.4.2-solc-0.7",
+    "@openzeppelin/contracts": "4.9.6",
+    "@openzeppelin/contracts-upgradeable": "4.9.6",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
+    "@uniswap/v3-periphery": "^1.4.4",
     "@prb/math": "^4.0.1",
     "ansi-regex": ">=5.0.1",
     "catapulta": "^0.3.3",
