--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@openzeppelin/contracts-upgradeable": "4.9.6",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "@uniswap/v3-periphery": "^1.4.4",
     "@prb/math": "^4.0.1",
+    "@uniswap/universal-router": "^1.6.0",
+    "@uniswap/v3-periphery": "^1.4.4",
     "ansi-regex": ">=5.0.1",
     "catapulta": "^0.3.3",
     "chai": "^4.3.4",
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.7.2",
-    "hardhat": "2.19.5",
+    "hardhat": "^2.22.3",
     "hardhat-gas-reporter": "^1.0.10",
     "mem": ">=4.0.0",
     "merkletreejs": "^0.2.24",
