--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
+    "@types/jest": "^29.5.12",
     "@uniswap/universal-router": "^1.6.0",
     "@uniswap/v3-periphery": "^1.4.4",
     "ansi-regex": ">=5.0.1",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "@summa-tx/memview-sol": "^2.1.2",
+    "@tenderly/hardhat-tenderly": "^2.2.2",
     "cross-fetch": "^4.0.0",
     "web3": "1.8.2"
   }
