--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,7 @@ src = 'contracts'
 out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
-cache_path  = 'cache_forge'
+cache_path = 'cache_forge'
+ast = true
+build_info = true
+extra_output = ["storageLayout"]
