--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "@prb/math": "^4.0.1",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@uniswap/universal-router": "^1.6.0",
     "@uniswap/v3-periphery": "^1.4.4",
     "ansi-regex": ">=5.0.1",
