--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,7 @@ build_info = true
 extra_output = ["storageLayout"]
 sender = "0xA0FCc0Ef2E8624797Ff20c38725748024bca67A3"
 fs_permissions = [{ access = "read", path = "./" }]
+auto_detect_solc = true
 
 [rpc_endpoints]
 arbitrumFork = 'https://virtual.arbitrum.rpc.tenderly.co/${TENDERLY_VIRTUAL_RPC}'
